* First working implementation of hybrid ldap+properties login provider

--- a/rundeckapp/web-app/WEB-INF/jaas.conf
+++ b/rundeckapp/web-app/WEB-INF/jaas.conf
@@ -1,3 +1,22 @@
 rundecklogin {
-       com.dtolabs.rundeck.jetty.jaas.PropertyFileLoginModule required debug=true file="web-app/WEB-INF/jaaslogin.properties";
+    com.dtolabs.rundeck.jetty.jaas.JettyCachingHybridLoginModule required
+    file="/Users/abratuhi/Workspaces/github/rundeck/rundeckapp/web-app/WEB-INF/jaaslogin.properties"
+    debug="true"
+    contextFactory="com.sun.jndi.ldap.LdapCtxFactory"
+    providerUrl="ldap://localhost:1388"
+    bindDn="cn=admin,dc=example,dc=com"
+    bindPassword="secret"
+    authenticationMethod="simple"
+    forceBindingLogin="true"
+    userBaseDn="ou=people,dc=example,dc=com"
+    userRdnAttribute="cn"
+    userIdAttribute="uid"
+    userPasswordAttribute="userPassword"
+    userObjectClass="inetOrgPerson"
+    roleBaseDn="ou=roles,dc=rundeck,dc=com"
+    roleNameAttribute="cn"
+    roleMemberAttribute="member"
+    roleObjectClass="group"
+    cacheDurationMillis="300000"
+    reportStatistics="true";
     };
